Dark mode fixes

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -13,7 +13,7 @@
   border-radius: 10px;
   background: $card_light_bg;
   max-width: 300px;
-  transition: 0.25s background;
+  transition: background-color 0.25s;
   a {
     color: $dark_bg;
     padding: 1px;
@@ -31,9 +31,6 @@
   .excerpt {
     font-style: normal;
     font-size: 12px;
-  }
-  &:hover {
-    background: $hover_grey;
   }
 }
 .featured_img {
